# catch_the_bot

./: README.md
src/noisy_boy_bringup/: package.xml  setup.cfg  setup.py
src/noisy_boy_bringup/launch/: catch_the_bot.launch.py  noisy_boy_bringup.launch.py
src/noisy_boy_bringup/rviz/: noisy_boy.rviz
src/noisy_boy_bringup/worlds/: empty.sdf
src/noisy_boy_controller/: package.xml  setup.cfg  setup.py
src/noisy_boy_controller/noisy_boy_controller/: noisy_boy_controller.py
src/noisy_boy_description/: package.xml  setup.cfg  setup.py
src/noisy_boy_description/config/: atom_controller.yaml  gazebo_bridge.yaml
src/noisy_boy_description/urdf/: noisy_boy.xacro  noisy_boy_base.xacro  noisy_boy_common_properties.xacro  noisy_boy_gazebo.xacro  noisy_boy_sensors.xacro
src/noisy_boy_interfaces/: CMakeLists.txt  package.xml
src/noisy_boy_interfaces/msg/: TargetBotArray.msg
src/noisy_boy_spawner/: package.xml  setup.cfg  setup.py
src/noisy_boy_spawner/noisy_boy_spawner/: noisy_boy_spawner.py
